--- a/musetric-front/src/theme/dark.scss
+++ b/musetric-front/src/theme/dark.scss
@@ -6,6 +6,11 @@
 	--color-splitter: hsl(0, 0%, 50%);
 	--color-icon: hsl(0, 0%, 91%);
 
+	--color-scrollbar-track: hsl(0, 0%, 15%);
+	--color-scrollbar-thumb: hsl(0, 0%, 30%);
+	--color-scrollbar-thumb-hover: hsl(0, 0%, 40%);
+	--color-scrollbar-thumb-active: hsl(0, 0%, 50%);
+
 	--color-cell-live: hsl(0, 0%, 100%);
 	--color-cell-dead: hsl(0, 0%, 0%);
 }
