--- a/musetric-front/src/theme/white.scss
+++ b/musetric-front/src/theme/white.scss
@@ -6,6 +6,11 @@
 	--color-splitter: hsl(0, 0%, 75%);
 	--color-icon: hsl(0, 0%, 68%);
 
+	--color-scrollbar-track: hsl(0, 0%, 95%);
+	--color-scrollbar-thumb: hsl(0, 0%, 76%);
+	--color-scrollbar-thumb-hover: hsl(0, 0%, 66%);
+	--color-scrollbar-thumb-active: hsl(0, 0%, 47%);
+
 	--color-cell-live: hsl(0, 0%, 0%);
 	--color-cell-dead: hsl(0, 0%, 100%);
 }
